# synthetic-data-generator

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  LICENSE  README.md  config.json  config.yaml  main.py  models.yaml  pyproject.toml  requirements.txt  run.ps1  test.py
.claude/: settings.local.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-from-milestone.yml  sync-issue-labels-to-pr.yml
data/contoso_products/: contoso_products.parquet  product_category.parquet  product_subcategory.parquet  products.parquet  synthetic_products.parquet
data/customer_names/: eu_first.csv  eu_last.csv  india_first.csv  india_last.csv  us_female_first.csv  us_male_first.csv  us_surnames.csv
data/exchange_rates_master/: fx_master.parquet
data/fact_out/: fact_chunk0000.csv
data/geography/: geography_master.parquet
data/parquet_dims/: customers.parquet  dates.parquet  geography.parquet  product_category.parquet  product_subcategory.parquet  products.parquet  promotions.parquet  stores.parquet
docs/: CONFIG_GUIDE.md  CUSTOMERS_REFACTOR_PLAN.md  DATES_REFACTOR_PLAN.md  EMPLOYEES_REFACTOR_PLAN.md  MODELS_GUIDE.md  PIPELINE_FLOWCHART.md  SALES_FACT_IMPROVEMENT_PLAN.md  cli-reference.md
docs/operations/: post-import-procedures.md  postgres-import.md  sql-server-import.md  tabular-user.md
samples/: Contoso.pbix
scripts/: COMMANDS.md  _common.ps1  activate_venv.ps1  build_geography_master.py  check_python.ps1  create_venv.ps1  helper_print_config_summary.py  optimize_delta.py  optimize_parquet.py  print_project_tree.py  profile_sales.py  profile_worker.py  repartition_delta.py  run_generator.ps1  run_postgres_import.ps1  run_sql_server_import.ps1  run_ui.ps1  run_web.ps1  sync_venv.ps1  verify_employee_store_sales.py  verify_model_relationships.py
scripts/sql/: run_postgres_import.py  run_sql_server_import.py
src/: __init__.py  cli.py  customers.py  dates.py  defaults.py  exceptions.py  generate_bulk_insert_sql.py  generate_create_table_scripts.py  output_utils.py  promotions.py  sales.py  static_schemas.py  stores.py
src/dimensions/: __init__.py  currency.py  customer_segments.py  customers.py  dates.py  employee_store_assignments.py  employees.py  exchange_rates.py  geography.py  geography_builder.py  lookups.py  promotions.py  return_reasons.py  static_loader.py  stores.py  subscriptions.py  superpowers.py  suppliers.py  time.py  wishlists.py
src/engine/: __init__.py  dimension_loader.py  packaging.py  packaging_legacy.py  powerbi_packaging.py  quality_report.py
src/facts/: __init__.py  sales.py
src/integrations/: __init__.py  fx_yahoo.py
src/pipeline/: config_loader.py  dimensions.py  dimensions_orchestrator.py  (+2 more)
tests/: conftest.py  test_basket.py  test_chunk_id_integrity.py  test_complaints.py  test_config_loader.py  test_coverage_preflight.py  test_customer_profiles.py  test_dates.py  test_delta_writer_schema.py  test_determinism.py  test_dialect.py  test_dialect_postgres.py  test_dimension_loader.py  test_dimensions.py  test_employee_keys.py  test_fact_writers.py  test_geography.py  test_gotchas_and_guards.py  test_integration.py  test_multi_event_returns.py  test_packaging.py  test_postgres_constraints.py  test_postgres_import.py  test_postgres_indexes.py  test_postgres_views_and_admin.py  test_pricing_pipeline.py  test_product_scd2.py  test_products.py  test_quality_report.py  test_quantity_model.py  test_sales_determinism_chunksize.py  test_sales_logic.py  test_sales_phase3_fidelity.py  test_sales_schema_consistency.py  test_sales_writer.py  test_salesperson_performance.py  test_schema.py  test_sql_tools.py  test_state.py  test_store_cluster_snapshot.py  (+10 more)
ui/: __init__.py  app.py  constants.py  helpers.py  presets.py  validators.py
web/: api.py  presets.py  shared_state.py  validators.py
(+740 files in other folders)
