[project]
name = "synthetic-data-generator"
version = "0.6.1"
description = "Analytics-ready retail data generator (star-schema) for BI, analytics, and data engineering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deltalake>=0.14.0",
    "fastapi>=0.135.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyodbc>=5.3.0",
    "PyYAML>=6.0.3",
    "uvicorn>=0.41.0",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 40
