[project]
name = "synthetic-data-generator"
version = "0.6.1"
description = "Analytics-ready retail data generator (star-schema) for BI, analytics, and data engineering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deltalake>=0.14.0,<2",
    "fastapi>=0.135.1,<1",
    "numpy>=2.3.5,<3",
    "pandas>=2.3.3,<4",
    "pyarrow>=22.0.0,<24",
    "pydantic>=2.12.5,<3",
    "PyYAML>=6.0.3,<7",
    "uvicorn>=0.41.0,<1",
    "yfinance>=0.2.66,<1",
]

[project.optional-dependencies]
sql = [
    "pyodbc>=5.3.0,<6",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
]

[project.scripts]
syndata = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 60
