[project]
name = "contosoforge"
version = "1.10.0"
description = "Analytics-ready retail data generator (star-schema) for BI, analytics, and data engineering"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = [
    "deltalake>=0.14.0,<2",
    "fastapi>=0.135.1,<1",
    "numpy>=2.3.5,<3",
    "pandas>=2.3.3,<4",
    "pyarrow>=22.0.0,<24",
    "pydantic>=2.12.5,<3",
    "PyYAML>=6.0.3,<7",
    "uvicorn>=0.41.0,<1",
    "yfinance>=0.2.66,<2",
]

[project.optional-dependencies]
sql = [
    "pyodbc>=5.3.0,<6",
]
postgres = [
    "psycopg[binary]>=3.1,<4",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
    "ruff>=0.15.16,<0.16",
]

[project.scripts]
syndata = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.pyright]
# This project is intentionally dynamically typed: runtime-bound globals
# (sales State), optional-import shims (try/except ImportError), and heavy
# numpy/pandas/pyarrow usage that static analysis can't model. In `basic`
# mode that produces ~1260 false positives across the repo. Tests (1809) are
# the correctness gate, so type-inference diagnostics are turned off here.
# Syntax errors and unresolved imports are still reported.
# Pylance reads this section, so it controls the editor squiggles too.
typeCheckingMode = "off"
# Silence the remaining "off"-mode warnings caused by optional-import shims
# (e.g. pyodbc/psycopg None'd on ImportError, then used in type expressions).
reportInvalidTypeForm = "none"
